--- a/now.json
+++ b/now.json
@@ -1,4 +1,8 @@
 {
     "version": 2,
-    "builds": [{ "src": "package.json", "use": "@now/next" }]
+    "name": "8-deploying",
+    "builds": [{ "src": "package.json", "use": "@now/next" }],
+    "routes": [
+      { "src": "/_next/static/(?:[^/]+/pages|chunks|runtime)/.+", "headers": { "cache-control": "immutable" } }
+    ]
   }
